--- a/TicTacToe/MainWindow.xaml
+++ b/TicTacToe/MainWindow.xaml
@@ -19,5 +19,17 @@
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
+
+        <Button x:Name="Button0_0" Grid.Column="0" Grid.Row="0" Content ="x" />
+        <Button x:Name="Button1_0" Grid.Column="1" Grid.Row="0" Content ="o" />
+        <Button x:Name="Button2_0" Grid.Column="2" Grid.Row="0" />
+
+        <Button x:Name="Button0_1" Grid.Column="0" Grid.Row="1" />
+        <Button x:Name="Button1_1" Grid.Column="1" Grid.Row="1" />
+        <Button x:Name="Button2_1" Grid.Column="2" Grid.Row="1" />
+
+        <Button x:Name="Button0_2" Grid.Column="0" Grid.Row="2" />
+        <Button x:Name="Button1_2" Grid.Column="1" Grid.Row="2" />
+        <Button x:Name="Button2_2" Grid.Column="2" Grid.Row="2" />
     </Grid>
 </Window>
